Updated menu toggle to show close button

--- a/index.html
+++ b/index.html
@@ -21,17 +21,41 @@
                 <div class="menu-toggle">&#9776;</div>
         
                 <!-- Navigation Menu -->
-                <ul>
+                <ul class="nav-menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Academic</a></li>
                     <li><a href="#">Students Zone</a></li>
                     <li><a href="#">Programmes</a></li>
+                    <!-- Dropdown for Programmes -->
+                    <!-- <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">Programmes</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Undergraduate</a></li>
+                            <li><a href="#">Postgraduate</a></li>
+                            <li><a href="#">Diploma</a></li>
+                            <li><a href="#">Short Courses</a></li>
+                        </ul>
+                    </li> -->
                     <li><a href="#">Apply</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
+
+        <!-- Image Slider -->
+        <div class="image-slider">
+            <!-- Navigation Buttons -->
+            <button class="slider-btn prev-btn">&lt;</button>
+            <button class="slider-btn next-btn">&gt;</button>
+
+            <!-- Images -->
+            <div class="slider-images">
+                <img src="./img/slider_one.png" alt="Slide 1">
+                <img src="./img/slider_two.png" alt="Slide 2">
+                <img src="./img/slider_three.png" alt="Slide 3">
+            </div>
+        </div>
 
         <script src="./js/index_script.js"></script>
     </body>
