--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="notice-section">
                 <img src="./img/notice_board2.jpg" alt="Notice Icon" class="section-icon">
                 <div class="notice-content">
-                    <h3>Kind Attention Here for Your Valuable Notices</h3>
+                    <h3>Kind Attention Here for Your Notices</h3>
                     <div class="scrolling-text">
                         <p>Important Notice: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Important Notice: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
