--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Second Partition (30%) - Login Button -->
             <div class="login-section">
                 <img src="./img/user.jpg" alt="Login Icon" class="section-icon" style="border-radius: 50%;">
-                <button class="login-btn">Student Login</button>
+                <button class="login-btn" id="studentLoginBtn">Student Login</button>
             </div>
         </div>
 
